# r3d3

./: .gitattributes  .gitignore  LICENSE  Makefile  README.md  devlog.txt  package-lock.json  package.json  webpack.config.js
src/cpp/BinaryFlightDelays/: Airline.cpp  Airline.h  Airport.cpp  Airport.h  Blob.cpp  Blob.h  CMakeLists.txt  CompactFlight.cpp  CompactFlight.h  CompactFlights  CompactFlights - Copy.wasm  Date.cpp  Date.h  DynamicEnum.cpp  DynamicEnum.h  Flights.cpp  Flights.h  GeoLocation.cpp  GeoLocation.h  Makefile  NumberRange.cpp  NumberRange.h  RawFlight.cpp  RawFlight.h  RawStringFlight.cpp  RawStringFlight.h  Serializer.cpp  Serializer.h  Time.cpp  Time.h  flight.cpp  flight.h  gmon.out  main.cpp  prof.txt  r3d3.cpp  r3d3.h
src/cpp/BinaryFlightDelays/src/: Airline.cpp  Airline.h  Airport.cpp  Airport.h  CompactFlight.cpp  CompactFlight.h  CompactFlight.tcc  CompactFlights.cpp  Date.cpp  Date.h  Flights.cpp  Flights.h  FlightsInDay.cpp  FlightsInDay.h  GeoLocation.cpp  GeoLocation.h  RawFlight.cpp  RawFlight.h  RawStringFlight.cpp  RawStringFlight.h  Time.cpp  Time.h  r3d3.cpp  r3d3.h  r3d3.tcc  wasm.cpp
src/cpp/BinaryFlightDelays/src/scripts/: export_Module.py  fix_arguments.py  preprocess.py  wrap_with_typescript.py
src/cpp/BinaryFlightDelays/src/util/: Blob.cpp  Blob.h  Color.cpp  Color.h  Color.tcc  Date.cpp  Date.h  DynamicEnum.h  DynamicEnum.tcc  GeoLocation.cpp  GeoLocation.h  NumberRange.cpp  NumberRange.h  NumberRange.tcc  Serializer.h  Serializer.tcc  Time.cpp  Time.h  Time.tcc  Vector.cpp  Vector.h  string_utils.cpp  string_utils.h
src/cpp/BinaryFlightDelays/wasm/: CompactFlights.html  CompactFlights.js  CompactFlights.wasm  r3d3.js
src/cpp/BinaryFlightDelays/wasm/bc/: Airline.bc  Airport.bc  CompactFlight.bc  CompactFlights.bc  Date.bc  Flights.bc  FlightsInDay.bc  GeoLocation.bc  RawFlight.bc  RawStringFlight.bc  Time.bc  r3d3.bc  wasm.bc
src/cpp/BinaryFlightDelays/wasm/bc/util/: Blob.bc  Color.bc  Date.bc  GeoLocation.bc  NumberRange.bc  Time.bc  Vector.bc  string_utils.bc
src/cpp/BinaryFlightDelays/wasm/html/: CompactFlights.html  CompactFlights.js  CompactFlights.wasm
src/cpp/BinaryFlightDelays/wasm/js/: CompactFlights.js  CompactFlights.wasm
src/cpp/DsvMissingDataStats/: CMakeLists.txt  DsvMissingDataStats  DsvMissingDataStats.cpp  DsvMissingDataStats.h  Makefile  README.md  main.cpp  utils.cpp  utils.h
src/data/: airports.json  cities.json  countries.json  states.json
src/html/: index.html  wasm.html
src/python/: Makefile  app.py
src/templates/: index.html
src/ts/: demo.js  index.js  main.js  main.js.map  main.ts  r3d3.js  r3d3.js.map  r3d3.ts  wasm.js
src/ts/core/: Airline.js  Airline.js.map  Airline.ts  Airport.js  Airport.js.map  Airport.ts  Color.js.map  Color.ts  Date.js.map  Date.ts  DynamicEnum.js  DynamicEnum.js.map  DynamicEnum.ts  Flight.d.ts  Flight.js  Flight.js.map  Flight.ts  FlightRenderer.js  FlightRenderer.js.map  FlightRenderer.ts  Flights.js  Flights.js.map  Flights.ts  FlightsFilter.ts  FlightsInDay.js  FlightsInDay.js.map  FlightsInDay.ts  GeoLocation.js  GeoLocation.js.map  GeoLocation.ts  Geolocation.js  Geolocation.ts  GetArray.js  GetArray.js.map  GetArray.ts  Map.ts  Time.ts  Vector.js  Vector.js.map  Vector.ts  (+6 more)
src/ts/util/: ReattachingBuffer.js  (+35 more)
(+3 files in other folders)
